src/pages/FAQ/FAQ.css
/* Updated CSS with logical class names for FAQ2 component */
.faq2-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;
    height: auto;
    margin-top: -10vh;
    background-color: var(--background-offwhite);
}
.faq2-page-title {
    color: var(--main-blue);
    font-weight: 300;
}
.faq2-title {
    font-size: 1rem;
    color: var(--main-blue);
    font-weight: 300;
}

/* Individual FAQ item styles */
.faq2-subject {
    width: 60vw;
    background-color: var(--accent-pink);
    border-radius: 25px;
    margin-bottom: 1rem;
    padding: 20px;
    text-align: left;
    height: 12vh;
}

.faq2-content {
    display: flex;
    color: transparent;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 15vh;
    justify-content: center;
    width: 100%;
}

.faq2-pagetitle {
    font-size: 4rem;
    font-weight: 600;
    margin-top: 3vh;
    margin-bottom: 0;
    color: var(--black-text);
}

.faq2-pagesubtitle {
    width: 40vw;
    text-align: center;
    font-size: 1.3rem;
    color: var(--black-text);
}

.faq2-subject.open {
    background-color: var(--main-blue); /* Background color when expanded */
    border-radius: 10px;
    margin-bottom: 10px;
    padding: 20px;
    height: auto;
    width: 60vw;

}

.faq2-content.open {
    margin-bottom: 10px;
}

/* FAQ question styles */
.faq2-title {
    cursor: pointer;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    border-radius: 25px;
    margin: auto;
    margin-top: 4vh;
    margin-bottom: 3vh;
    font-size: 1.7rem;
}

.faq2-title.active {
    background-color: transparent; /* Background color when expanded */
    color: #ffffff;
}

.faq2-title::before {
    content: ''; /* Empty content for before pseudo-element */
    color: #fff;
    width: 20px;
    height: 20px;
    background-size: cover;
}

/* FAQ answer styles */
.faq2-content {
    overflow: hidden;
    padding: 0 0 0 0;
}

.faq2-content.open {
    max-height: 500px; /* Adjust the value as needed for your content */
    color: #fff;
    width: 35vw;
    margin-top: 1.5rem;
    margin-left: 2vw;
    line-height: 1.5;
    font-size: 1rem;
}

/* After content */
.faq2-subject.open::after {
    display: block;
    color: #fff; /* Text color for the after content */
    margin-top: 10px; /* Spacing between content and after content */
}

.faq2-caron {
    position: absolute;
    right: 5vw;
    height: 3vh;
    filter: invert(100%);
}

.faq2-bottom {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 40vw;
    height: 100vh;
    text-align: center;
}

.faq2-bottom-img {
    height: 60vh;
}

.faq2-bottom-title {
    color: var(--black-text);
}

.faq2-float {
    position: absolute;
    height: 30vh;
    width: 10vw;
    margin: 0;
    position: fixed;
    bottom: 40%;
    right: 3vw;
    opacity: 1;
    margin: 0;
}

.faq2-bottom-button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background-color: var(--main-blue); /* Change this to your desired button style */
    color: #fff;
    padding: 10px;
    font-size: 1.1rem;
    font-weight: 600;
    margin: auto;
    width: 15vw;
    height: 8.5vh;
    border: none;
    cursor: pointer;
    border-radius: 17.4rem;
}

.faq2-bottom-button:hover {
    background-color: transparent;
    color: var(--main-blue);
    border: 4px solid var(--main-blue);
}

@media screen and (max-width: 750px) {
    .faq2-pagesubtitle {
        width: 80vw;
        text-align: center;
        font-size: 1.3rem;
    }

    .faq2-content {
        margin-top: 12vh;
    }

    .faq2-pagetitle {
        font-size: 3.5rem;
        font-weight: 600;
        margin-bottom: 0;
        margin-top: 2vh;
        text-align: center;
    }

    #faq2-list {
        padding: 0;
    }

    .faq2-title {
        font-size: 1.2rem;
        margin-top: 2vh;
        margin-left: -5vw;
    }

    .faq2-subject {
        height: 7vh;
        width: 80vw;
    }

    .faq2-content.open {
        width: 80vw;
        margin-left: 0;
        line-height: 1.5;
        font-size: 1rem;
        

    }
    .faq2-subject.open {
        width: 80vw;
        margin: auto;
        margin-left: 0;
        line-height: 1.5;
        font-size: 1rem;
        margin-bottom: 10px;

    }

    .faq2-caron {
        position: absolute;
        right: 5vw;
        height: 3vh;
    }

    .faq2-bottom-img {
        height: 50vh;
    }

    .faq2-bottom-button {
        width: 40vw;
    }

    .faq2-bottom {
        width: 70vw;
    }

    .faq2-float {
        top: 0;
        right: 2rem;
    } 
}
/* 
@media screen and (max-width: 500px) {
    .faq2-title {
        font-size: 1rem;
        margin-top: 2vh;
        margin-left: -6vw;
        width: 65vw;
    }

    #faq2-list {
        width: 80vw;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .faq2-subject {
        height: 7vh;
        width: 80vw;
    }
} */

@media screen and (max-width: 425px) {
    /* .faq2-subject {
        width:80vw;
    }
         */
    
    .faq2-pagetitle {
        font-size: 3rem;
    }

    .faq2-pagesubtitle {
        font-size: 1.1rem;
    }

    /* .faq2-content {
        width: 90vw;
    }

    .faq2-subject.open {
        width:80vw;
    } */

    .faq2-title {
        font-size: 1rem;
        margin-top: 2vh;
        margin-left: -6vw;
        width: 65vw;
    }

    .faq2-bottom-title {
        font-size: 1.2rem;
    }
}
/* 
@media screen and (max-width: 375px) {
    .faq2-pagetitle {
        font-size: 2.4rem;
        width: 90vw;
    }

    .faq2-pagesubtitle {
        font-size: 1rem;
    }

    .faq2-content {
        width: 90vw;
    }
    .faq2-subject {
        width:80vw;
    }

    .faq2-subject.open {
        width: 80vw;
    }

    .faq2-title {
        font-size: 1rem;
        margin-top: 2vh;
        margin-left: -6vw;
        width: 65vw;
    }

    .faq2-bottom-title {
        font-size: 1.2rem;
    }
} */

